--- a/linoleum.css
+++ b/linoleum.css
@@ -5,15 +5,31 @@ body {
 
 /*
 **	---------------------------
-**	change the size of
-**	the tiles here
+**	tile size
 **	---------------------------
 */
-.tile {
-    width: 160px;
-    height: 160px;
-}
+	.tile {
+	    width: 160px;
+	    height: 160px;
+	}
 /*
+**	---------------------------
+**	front face color
+**	---------------------------
+*/
+	.tile .face.front {
+	    background-color: rgb(166,57,48);
+	}
+/*
+**	---------------------------
+**	back face color
+**	---------------------------
+*/
+	.tile .face.back {
+	    background-color: rgb(73,187,90);
+	}
+/*
+**	---------------------------
 **	---------------------------
 */
 
@@ -37,11 +53,6 @@ body {
     position: absolute;
     left: 0;
     top: 0;
-    -webkit-transform-style: preserve-3d;
-    -moz-transform-style: preserve-3d;
-    -o-transform-style: preserve-3d;
-    -ms-transform-style: preserve-3d;
-    transform-style: preserve-3d;
 }
 
 .tile.active {
@@ -52,6 +63,11 @@ body {
     position: relative;
     width: 100%;
     height: 100%;
+}
+
+.tile,
+.tile .inner
+{
     -webkit-transform-style: preserve-3d;
     -moz-transform-style: preserve-3d;
     -o-transform-style: preserve-3d;
@@ -68,14 +84,6 @@ body {
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     border-radius: 50%;
-}
-
-.tile .face.front {
-    background-color: rgb(166,57,48);
-}
-
-.tile .face.back {
-    background-color: rgb(73,187,90);
 }
 
 
