--- a/linoleum.css
+++ b/linoleum.css
@@ -11,6 +11,7 @@ body {
 	.tile {
 	    width: 160px;
 	    height: 160px;
+        line-height: 160px;
 	}
 /*
 **	---------------------------
@@ -76,11 +77,13 @@ body {
 }
 
 .tile .face {
+    font-size: 36px;
     position: absolute;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
+    line-height: inherit;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     border-radius: 50%;
