--- a/linoleum.css
+++ b/linoleum.css
@@ -21,6 +21,10 @@ body {
 	.tile .face.front {
 	    background-color: rgb(166,57,48);
 	}
+
+    .tile.sticky .face.front {
+        background-color: rgb(225,109,210);
+    }
 /*
 **	---------------------------
 **	back face color
@@ -29,6 +33,10 @@ body {
 	.tile .face.back {
 	    background-color: rgb(73,187,90);
 	}
+
+    .tile.sticky .face.back {
+        background-color: rgb(0,191,255);
+    }
 /*
 **	---------------------------
 **	---------------------------
