--- a/linoleum.css
+++ b/linoleum.css
@@ -1,98 +1,91 @@
 
 body {
-    background-color: rgb(0,0,58);
+  background-color: rgb(0,0,58);
 }
 
 /*
-**	---------------------------
-**	tile size
-**	---------------------------
+**  ---------------------------
+**  tile size
+**  ---------------------------
 */
-	.tile {
-	    width: 160px;
-	    height: 160px;
-        line-height: 160px;
-	}
-/*
-**	---------------------------
-**	front face color
-**	---------------------------
-*/
-	.tile .face.front {
-	    background-color: rgb(166,57,48);
-	}
-
-    .tile.sticky .face.front {
-        background-color: rgb(225,109,210);
-    }
-/*
-**	---------------------------
-**	back face color
-**	---------------------------
-*/
-	.tile .face.back {
-	    background-color: rgb(73,187,90);
-	}
-
-    .tile.sticky .face.back {
-        background-color: rgb(0,191,255);
-    }
-/*
-**	---------------------------
-**	---------------------------
-*/
-
-#container {
-    text-align: center;
-    position: absolute;
-    left: 10%;
-    top: 90px;
-    width: 80%;
-    border: 1px solid rgb(255,89,199);
-}
-
-.sizer {
-    display: inline-block;
-}
-
-.tile {
-    position: absolute;
-    left: 0;
-    top: 0;
-}
-
-.tile.active {
-    z-index: 1;
-}
-
-.tile .inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-}
-
-.tile,
-.tile .inner
-{
-    -webkit-transform-style: preserve-3d;
-    -moz-transform-style: preserve-3d;
-    -o-transform-style: preserve-3d;
-    -ms-transform-style: preserve-3d;
-    transform-style: preserve-3d;
-}
-
-.tile .face {
+  .tile {
     font-size: 36px;
     position: absolute;
     left: 0;
     top: 0;
+    width: 160px;
+    height: 160px;
+    line-height: 160px;
+    background-color: rgb(166,57,48);
+    border-radius: 50%;
+  }
+
+  .tile.active {
+    z-index: 1;
+  }
+
+  .tile.sticky {
+    background-color: rgb(225,109,210);
+  }
+
+  .tile .inner {
+    position: relative;
     width: 100%;
     height: 100%;
-    line-height: inherit;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    border-radius: 50%;
+  }
+/*
+**  ---------------------------
+**  ---------------------------
+*/
+
+#container {
+  text-align: center;
+  position: relative;
+  margin: auto;
+  margin-top: 30px;
+  width: 80%;
+  border: 1px solid #FF59C7;
+  background-color: rgba(255,255,255,0.3);
 }
+
+.sizer {
+  display: inline-block;
+}
+
+/*.tile {
+  position: absolute;
+  left: 0;
+  top: 0;
+}*/
+
+/*.tile .inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}*/
+
+/*.tile,
+.tile .inner
+{
+  -webkit-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
+  -o-transform-style: preserve-3d;
+  -ms-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+}*/
+
+/*.tile .face {
+  font-size: 36px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  line-height: inherit;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+}*/
 
 
 
