--- a/dev/style.css
+++ b/dev/style.css
@@ -18,6 +18,7 @@ body {
   position: relative;
   margin: auto;
   margin-top: 30px;
+  margin-bottom: 60px;
   width: 80%;
   box-shadow: 0 0 0 2px #d4f852;
   background-color: rgba(255,255,255,0.3);
